# rust-gamegboycolor

./: .gitignore  Cargo.toml  README.md
src/: apu.rs  bus.rs  config.rs  context.rs  cpu.rs  gameboycolor.rs  interface.rs  interrupt.rs  joypad.rs  lib.rs  main.rs  ppu.rs  serial.rs  timer.rs  utils.rs
src/cartridge/: mod.rs  rom.rs
src/cartridge/mbc/: huc1.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mbc6.rs  mod.rs  rom_only.rs
tests/: blargg_test.rs
