[package]
name = "rust-gameboycolor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bitflags = "2.6.0"
chrono = "0.4.38"
derive_builder = "0.20.2"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
modular-bitfield = "0.11.2"
sdl2 = "0.37.0"
thiserror = "1.0.64"
tokio = "1.41.0"
clap = { version = "4.1", features = ["derive"] }
